--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 server.compression.enabled=true
 
 logcock.base-path=/home/user
+
+logcock.folders[0].name=home
+logcock.folders[0].base-path=/home/user
+
+logcock.folders[1].name=tmp
+logcock.folders[1].base-path=/tmp
