Basic tailing funcionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ logcock.folders[0].base-path=/home/user
 
 logcock.folders[1].name=tmp
 logcock.folders[1].base-path=/tmp
+
+logging.file=logcock.log
