--- a/pom.xml
+++ b/pom.xml
@@ -71,13 +71,14 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
     </dependency>
-<!--
+    <!-- <dependency> <groupId>com.google.guava</groupId> <artifactId>guava</artifactId>
+      <version>29.0-jre</version> </dependency> -->
     <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
-      <version>29.0-jre</version>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.8.0</version>
     </dependency>
- -->
+
 
     <dependency>
       <groupId>org.webjars</groupId>
@@ -93,7 +94,7 @@
     <dependency>
       <groupId>org.webjars.npm</groupId>
       <artifactId>bulma</artifactId>
-      <version>0.8.2</version>
+      <version>0.9.1</version>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
@@ -146,6 +147,11 @@
       </exclusions>
     </dependency>
 
+    <dependency>
+      <groupId>org.webjars.npm</groupId>
+      <artifactId>streamsaver</artifactId>
+      <version>2.0.3</version>
+    </dependency>
 
     <dependency>
       <groupId>org.webjars</groupId>
@@ -181,7 +187,7 @@
     <dependency>
       <groupId>org.webjars.npm</groupId>
       <artifactId>ace-builds</artifactId>
-      <version>1.4.11</version>
+      <version>1.4.12</version>
     </dependency>
     <dependency>
       <groupId>org.webjars.npm</groupId>
