--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,12 @@ logcock.folders[0].base-path=/home/user
 logcock.folders[1].name=tmp
 logcock.folders[1].base-path=/tmp
 
-logging.file=logcock.log
+logging.file.name=logcock.log
+
+
+server.ssl.enabled=true
+server.port=8443
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:logcock.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=logcock
