--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
 server.compression.enabled=true
+logging.file.name=logcock.log
 
-logcock.base-path=/home/user
 
+# ---
+spring.config.activate.on-profile=demo
 logcock.folders[0].name=home
 logcock.folders[0].base-path=/home/user
 
 logcock.folders[1].name=tmp
 logcock.folders[1].base-path=/tmp
-
-logging.file.name=logcock.log
-
 
 server.ssl.enabled=true
 server.port=8443
@@ -17,3 +16,4 @@ server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:logcock.p12
 server.ssl.key-store-password=password
 server.ssl.key-alias=logcock
+
